syntax = "proto3";

package calculator;

option go_package = "go-grpc-sum-number/calculator";

message DevidedByRequest {
  int64 number1 = 1;
  int64 number2 = 2;
}

message DevidedByResponse {
  int64 result = 1;
}
