syntax = "proto3";

package calculator;

option go_package = "go-grpc-sum-number/calculator";

message FibonacciRequest {
  int64 value = 1;
}
message FibonacciResponse {
  int64 value = 1;
}
